--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}InfoSphere Register{% endblock %}
-{% block head %}{% endblock %}
+{% block head %}
+    <script src="{{ url_for('static', filename = 'jquery/jquery.3.6.min.js') }}"></script>
+    <script src="{{ url_for('static', filename = 'js/register.js') }}"></script>
+{% endblock %}
 {% block body %}
 <div class="row mt-4">
             <div class="col"></div>
