--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="/">Home Page <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Post</a>
+                        <a class="nav-link" href="{{ url_for('qa.public_question') }}">Post</a>
                     </li>
                     <li class="nav-item ml-2">
                         <form class="form-inline my-2 my-lg-0" method="GET" action="#">
