--- a/templates/public_question.html
+++ b/templates/public_question.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}InfoSphere Register{% endblock %}
+{% block title %}InfoSphere Post Questions{% endblock %}
 {% block head %}{% endblock %}
 {% block body %}
 <div class="row" style="margin-top: 20px;">
