--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,28 @@
 {% extends "base.html" %}
 {% block title %}InfoSphere Register{% endblock %}
-{% block head %}{% endblock %}
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+{% endblock %}
 {% block body %}
 <div class="row" style="margin-top: 20px;">
     <div class="col"></div>
     <div class="col-10">
         <ul class="question-ul">
+            {% for question in questions %}
             <li>
                 <div class="side-question">
-                    <img class="side-question-avatar" src="./static/images/avatar.jpg" alt="">
+                    <img class="side-question-avatar" src="{{ url_for('static', filename='images/avatar.jpg') }}" alt="">
                 </div>
                 <div class="question-main">
-                    <div class="question-title"><a href="#">How Iron Man Was Made</a></div>
-                    <div class="question-content">The Legendary Journey of Iron Man</div>
+                    <div class="question-title"><a href="{{ url_for('qa.qa_detail', qa_id=question.id) }}">{{ question.title}}</a></div>
+                    <div class="question-content">{{ question.content}}</div>
                     <div class="question-detail">
-                        <span class="question-author">Tony Stark</span>
-                        <span class="question-time">December 1, 2022</span>
+                        <span class="question-author">{{ question.author.username}}</span>
+                        <span class="question-time">{{ question.create_time}}</span>
                     </div>
                 </div>
             </li>
+            {% endfor %}
         </ul>
     </div>
     <div class="col"></div>
